@@ -514,5 +514,10 @@ Tue Mar  9 17:26:28 CET 1999
 Sun Mar 14 15:44:18 CET 1999
 
 	- Synced preproc.y with gram.y.
+
+Thu Mar 18 18:57:31 CET 1999
+
+	- Synced preproc.y with gram.y.
+	- Added '%' operator.
 	- Set library version to 3.0.0
 	- Set ecpg version to 2.6.0
